grammar.js
    program: ($) =>
      repeat(choice($._statement, $._declaration, $.enum, ";")),

    // --- Declarations ---

    _declaration: ($) =>
      choice(
        $.method,
        $.class,
        $.module,
        $.export_method,
        $.type_alias,
      ),

    method: ($) =>
      method($, choice(
        $.constant,
        $.identifier,
        $.setter_name,
        $.self_method_name,
        $.operator_name,
      )),

    export_method: ($) =>
      seq(
        "export",
        $.method,
      ),

    parameters: ($) =>
      prec.dynamic(10, seq(
        "(",
        optional(
          seq(
            $._parameter,
            repeat(seq(",", $._parameter)),
            optional(","),
          ),
        ),
        ")",
      )),

    _parameter: ($) =>
      choice(
        $.typed_parameter,
        $.ivar_parameter,
        $.splat_parameter,
        $.double_splat_parameter,
        $.keyword_separator,
        $.block_parameter,
      ),

    block_parameter: ($) =>
      seq("&", field("name", choice($.identifier, $.constant)), token(prec(3, ":")), $.block_type),

    block_type: ($) =>
      seq(
        choice($.type_annotation, seq("(", optional(seq(
          $.type_annotation, repeat(seq(",", $.type_annotation)),
        )), ")")),
        optional(seq("->", $.type_annotation)),
      ),

    typed_parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.constant)),
        token(prec(3, ":")),
        $.type_annotation,
        optional(seq("=", $._expression)),
      ),

    type_annotation: ($) =>
      seq(
        $._type,
        repeat(seq("|", $._type)),
      ),

    _type: ($) =>
      seq(choice(
        $.type_name,
        $.qualified_type_name,
        $.type_shape,
        $.type_tuple,
      ), optional("?")),

    type_name: ($) =>
      seq(
        choice(
          $.identifier,
          $.constant,
          "nil",
          "type",
        ),
        optional($.type_arguments),
      ),

    return_type: ($) =>
      seq(
        alias($._signature_arrow, "->"),
        $.type_annotation,
      ),

    enum: ($) =>
      seq(
        "enum",
        field("name", choice($.constant, $.identifier)),
        repeat(";"),
        repeat1(seq(
          field("member", alias(choice($.constant, $.identifier), $.enum_member)),
          repeat(";"),
        )),
        "end",
      ),

    scoped_constant: ($) =>
      seq($.constant, repeat1(seq(token(prec(4, "::")), $.constant))),

    _statement: ($) =>
      choice($.alias, $._non_alias_statement),

    command_call: ($) =>
      prec.right(seq(
        field("method", choice($.identifier, $.constant, $.member_access)),
        $._command_start,
        field("arguments", $.command_arguments),
        optional($.block),
      )),

    command_arguments: ($) =>
      prec.right(seq(
        $._command_argument,
        repeat(seq(",", $._command_argument)),
      )),

    _command_argument: ($) =>
      choice(
        $._argument,
        $.endless_range,
      ),

    modifier: ($) =>
      prec.left(seq(
        field("body", choice(
          $._expression,
          $.typed_assignment,
          $.return,
          $.break,
          $.next,
          $.retry,
          $.raise,
        )),
        field("keyword", choice(alias($._modifier_if, "if"), alias($._modifier_while, "while"))),
        field("condition", $._expression),
      )),

    assignment: ($) =>
      prec.right(PREC.ASSIGNMENT, seq(
        choice($.parenthesized_target, $._expression),
        "=",
        $._rhs_expression,
      )),

    _rhs_expression: ($) =>
      choice(
        $._expression,
        $.endless_range,
      ),

    destructuring_assignment: ($) =>
      prec.right(PREC.ASSIGNMENT, seq(
        field("left", choice(seq(
          $._destructure_target,
          repeat1(seq(",", $._destructure_target)),
        ), $.splat_target, $.destructured_target)),
        "=",
        field("right", seq(
          $._expression,
          repeat(seq(",", $._expression)),
        )),
      )),

    // Safe navigation is read-only and rejected anywhere in an assignment
    // target, so member and index targets build on dot-only receiver
    // chains: `user&.name`, `user&.profile.name`, and `user&.items[0]` all
    // error as in the interpreter.
    _destructure_target: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.instance_variable,
        $.class_variable,
        alias($._assignable_member_access, $.member_access),
        alias($._assignable_subscript, $.subscript),
        $.splat_target,
        $.destructured_target,
      ),

    _assignable_member_access: ($) =>
      prec.left(PREC.CALL - 1, seq(
        $._assignable_receiver,
        ".",
        $.identifier,
      )),

    _assignable_subscript: ($) =>
      prec(PREC.CALL, seq(
        $._assignable_receiver,
        alias($._index_open, "["),
        $._expression_or_closed_range,
        repeat(seq(",", $._expression_or_closed_range)),
        "]",
      )),

    destructured_target: ($) =>
      choice(
        seq("(", $._destructure_target, repeat(seq(",", $._destructure_target)), ")"),
        seq("[", $._destructure_target, repeat(seq(",", $._destructure_target)), "]"),
      ),

    splat_target: ($) =>
      seq("*", optional(choice($.identifier, $.constant, alias($._assignable_member_access, $.member_access), alias($._assignable_subscript, $.subscript)))),

    parenthesized_target: ($) =>
      prec.dynamic(1, seq("(", choice(
        $.identifier,
        $.constant,
        $.parenthesized_target,
      ), ")")),

    compound_assignment: ($) =>
      prec.right(PREC.ASSIGNMENT, seq(
        choice($.parenthesized_target, $._expression),
        choice("+=", "-=", "*=", "/=", "//=", "%=", "**=", "||=", "&&="),
        $._rhs_expression,
      )),

    return: ($) =>
      prec.right(seq(
        "return",
        optional(seq(
          $._range_or_expression,
          repeat(seq(",", $._range_or_expression)),
        )),
      )),

    _range_or_expression: ($) =>
      choice($._expression, $.endless_range),

    break: ($) =>
      prec.right(seq("break", optional($._expression))),

    next: ($) =>
      prec.right(seq("next", optional($._expression))),

    retry: (_$) => "retry",

    raise: ($) =>
      prec.right(seq(
        "raise",
        optional(choice(
          prec.dynamic(10, seq("(", $._expression, ")")),
          seq($._argument, repeat(seq(",", $._argument))),
        )),
      )),

    yield: ($) =>
      prec.right(seq(
        "yield",
        optional(choice(
          prec.dynamic(10, seq(choice(alias($._call_open, "("), "("), optional($.argument_list), ")")),
          $.argument_list,
        )),
      )),

    if: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        optional("then"),
        optional($._body),
        repeat($.elsif),
        optional($.else),
        "end",
      ),

    elsif: ($) =>
      seq(
        "elsif",
        field("condition", $._expression),
        optional("then"),
        optional($._body),
      ),

    else: ($) =>
      seq(
        "else",
        optional($._body),
      ),

    case: ($) =>
      seq(
        "case",
        optional(field("subject", $._expression)),
        repeat(";"),
        repeat1($.when),
        optional($.else),
        "end",
      ),

    when: ($) =>
      seq(
        "when",
        $._when_pattern,
        repeat(seq(",", $._when_pattern)),
        optional("then"),
        optional($._body),
      ),

    _when_pattern: ($) =>
      choice($._range_or_expression, $.splat_argument),

    while: ($) =>
      seq(
        "while",
        field("condition", $._expression),
        optional($._body),
        "end",
      ),

    // For-loop variables are block-parameter-style bindings: identifiers,
    // splats, and nested groups only. Member, index, and instance-variable
    // targets are parse errors in the interpreter.
    for: ($) =>
      seq(
        "for",
        field("variable", $._for_target),
        repeat(seq(",", field("variable", $._for_target))),
        "in",
        field("iterable", $._expression),
        optional($._body),
        "end",
      ),

    _for_target: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.splat_target,
        alias($._for_target_group, $.destructured_target),
      ),

    begin: ($) =>
      seq(
        "begin",
        optional($._body),
        optional(seq(repeat1($.rescue), optional($.else))),
        optional($.ensure),
        "end",
      ),

    rescue: ($) =>
      seq(
        "rescue",
        optional(choice(
          prec.dynamic(10, seq("(", $._rescue_type, ")")),
          $._rescue_type,
        )),
        optional(seq("=>", field("binding", choice($.identifier, $.constant)))),
        optional($._body),
      ),

    _rescue_type: ($) =>
      seq(
        choice($.constant, $.scoped_constant),
        repeat(seq("|", choice($.constant, $.scoped_constant))),
      ),

    ensure: ($) =>
      seq(
        "ensure",
        optional($._body),
      ),

    // --- Expressions ---

    _expression: ($) =>
      choice(
        $.yield,
        $.command_call,
        $.assignment,
        $.compound_assignment,
        $.ternary,
        $.binary,
        $.unary,
        $.beginless_range,
        $.rescue_modifier,
        $.call,
        $.member_access,
        $.computed_call,
        $.scope_resolution,
        $.subscript,
        $._primary,
      ),

    binary: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "||", $._expression)),
        prec.left(PREC.AND, seq($._expression, "&&", $._expression)),
        prec.left(PREC.EQUALITY, seq($._expression, choice("==", "===", "!=", "=~", "!~"), $._expression)),
        prec.left(PREC.COMPARISON, seq($._expression, choice("<", ">", "<=", ">=", "<=>"), $._expression)),
        prec.left(PREC.RANGE, seq($._expression, choice("..", "..."), $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, "&", $._expression)),
        prec.left(PREC.SHIFT, seq($._expression, "<<", $._expression)),
        prec.left(PREC.ADDITIVE, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.MULTIPLICATIVE, seq($._expression, choice(alias($._multiply, "*"), alias($._divide, "/"), "/", "//", "%"), $._expression)),
        prec.right(PREC.POWER, seq($._expression, "**", $._expression)),
      ),

    // Dynamic -1: when GLR can read `expr .. expr` either as one binary range
    // or as `expr` followed by a beginless-range statement, the binary range
    // wins.
    _expression_or_closed_range: ($) =>
      choice(
        $._expression,
        alias($._endless_range_closed, $.endless_range),
      ),

    // The external keyword only fires on the body's own line, so a `rescue`
    // opening a new line always reads as a begin/def rescue clause.
    rescue_modifier: ($) =>
      prec.left(PREC.RESCUE, seq(
        field("body", $._expression),
        alias($._rescue_modifier_keyword, "rescue"),
        field("handler", $._expression),
      )),

    unary: ($) =>
      prec(PREC.UNARY, seq(
        choice("-", "+", "!"),
        $._expression,
      )),

    scope_resolution: ($) =>
      prec.left(PREC.CALL, seq(
        $._expression,
        token(prec(4, "::")),
        choice($.identifier, $.constant),
      )),

    call: ($) =>
      prec.right(PREC.CALL, choice(
        seq(
          field("receiver", optional(seq($._expression, choice(".", "&.")))),
          field("method", choice($.identifier, $.constant)),
          alias($._call_open, "("),
          optional($.argument_list),
          ")",
          optional($.block),
        ),
        seq(
          field("receiver", optional(seq($._expression, choice(".", "&.")))),
          field("method", choice($.identifier, $.constant)),
          $.block,
        ),
      )),

    member_access: ($) =>
      prec.left(PREC.CALL - 1, seq(
        $._expression,
        choice(".", "&."),
        choice($.identifier, $.constant, $.operator_name),
        optional($.block),
      )),

    subscript: ($) =>
      prec(PREC.CALL, seq(
        $._expression,
        alias($._index_open, "["),
        $._expression_or_closed_range,
        repeat(seq(",", $._expression_or_closed_range)),
        "]",
      )),

    block: ($) =>
      seq($._block_open, optional($.block_parameters), optional($._body), "}"),

    block_parameters: ($) =>
      seq(
        "|",
        optional(seq($._block_parameter,
          repeat(seq(",", $._block_parameter)))),
        "|",
      ),

    _block_parameter: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.typed_parameter,
        $.destructured_parameter,
      ),

    // Destructured block parameters: { |(head, *)| ... }. Splats live
    // only inside groups, matching the interpreter.
    destructured_parameter: ($) =>
      choice(
        seq("(", $._destructured_parameter_element, repeat(seq(",", $._destructured_parameter_element)), ")"),
        seq("[", $._destructured_parameter_element, repeat(seq(",", $._destructured_parameter_element)), "]"),
      ),

    _destructured_parameter_element: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.typed_parameter,
        $.splat_target,
        $.splat_parameter,
        $.destructured_parameter,
      ),

    argument_list: ($) =>
      seq(
        $._paren_argument,
        repeat(seq(",", $._paren_argument)),
        optional(","),
      ),

    _paren_argument: ($) =>
      choice(
        $._argument,
        alias($._endless_range_closed, $.endless_range),
      ),

    _argument: ($) =>
      choice(
        $.keyword_argument,
        $.splat_argument,
        $.double_splat_argument,
        $._expression,
      ),

    splat_argument: ($) =>
      seq("*", $._expression),

    parenthesized: ($) =>
      seq("(", $._expression_or_closed_range, ")"),

    array: ($) =>
      seq(
        "[",
        optional(
          seq(
            $._expression_or_closed_range,
            repeat(seq(",", $._expression_or_closed_range)),
            optional(","),
          ),
        ),
        "]",
      ),

    hash: ($) =>
      seq(
        choice("{", alias($._block_open, "{")),
        optional(
          seq(
            $.hash_entry,
            repeat(seq(",", $.hash_entry)),
            optional(","),
          ),
        ),
        "}",
      ),

    hash_entry: ($) =>
      choice(
        seq(
          field("key", choice($.identifier, $.constant, $.string)),
          token(prec(3, ":")),
          field("value", $._expression_or_closed_range),
        ),
        // Expression-position shape literals (JSON.parse_as schemas): the
        // value reads as a type annotation. The dynamic penalty keeps the
        // expression reading for groups that parse both ways ({ id: string }),
        // so this branch only wins where only type syntax parses
        // (string | nil, array<int>).
        prec.dynamic(-1, seq(
          field("key", choice($.identifier, $.constant, $.string)),
          token(prec(3, ":")),
          field("value", $.type_annotation),
        )),
        // Nullable builtin shorthand ({ name: string? }): a ?-suffixed
        // builtin type name is always a shape field, mirroring the
        // interpreter's builtin-leaf rule, while other ?-suffixed
        // identifiers ({ ok: valid? }) keep the expression reading.
        prec.dynamic(1, seq(
          field("key", choice($.identifier, $.constant, $.string)),
          token(prec(3, ":")),
          field("value", alias($.nullable_builtin_type, $.type_annotation)),
        )),
        // value omission: { name:, age: } takes the value from a local of the same name
        seq(
          field("key", choice($.identifier, $.constant)),
          token(prec(3, ":")),
        ),
      ),

    // --- Body ---
