test/corpus/control_flow.txt
================
If elsif else
================

if amount >= 100
  "large"
elsif amount >= 10
  "medium"
else
  "small"
end

---

(program
  (if
    condition: (binary
      (identifier)
      (integer))
    (string
      (string_content))
    (elsif
      condition: (binary
        (identifier)
        (integer))
      (string
        (string_content)))
    (else
      (string
        (string_content)))))

================
Case when
================

case score
when 100
  "perfect"
when 90
  "great"
else
  "ok"
end

---

(program
  (case
    subject: (identifier)
    (when
      (integer)
      (string
        (string_content)))
    (when
      (integer)
      (string
        (string_content)))
    (else
      (string
        (string_content)))))

================
Control flow as assignment values
================

x = if a > 0
  1
else
  2
end
y = begin
  compute
end

---

(program
  (assignment
    (identifier)
    (if
      (binary
        (identifier)
        (integer))
      (integer)
      (else
        (integer))))
  (assignment
    (identifier)
    (begin
      (identifier))))

================
Contextual then and while header
================

if a then puts 1 end
while ready
  step
end

---

(program
  (if
    (identifier)
    (command_call
      (identifier)
      (command_arguments
        (integer))))
  (while
    (identifier)
    (identifier)))

================
Statement modifiers on control keywords
================

raise "x" if bad
next if done
break if full
return 0 if empty

---

(program
  (modifier
    (raise
      (string
        (string_content)))
    (identifier))
  (modifier
    (next)
    (identifier))
  (modifier
    (break)
    (identifier))
  (modifier
    (return
      (integer))
    (identifier)))

================
Multi value return and destructuring
================

def pair
  return 1, 2
end
a, b = pair
c, d = 1, 2

---

(program
  (method
    (identifier)
    (return
      (integer)
      (integer)))
  (destructuring_assignment
    (identifier)
    (identifier)
    (identifier))
  (destructuring_assignment
    (identifier)
    (identifier)
    (integer)
    (integer)))

================
Break and next with values
================

r = [1, 2].map { |v|
  next v * 2
}
while true
  break 5
end

---

(program
  (assignment
    (identifier)
    (call
      (array
        (integer)
        (integer))
      (identifier)
      (block
        (block_parameters
          (identifier))
        (next
          (binary
            (identifier)
            (integer))))))
  (while
    (true)
    (break
      (integer))))

================
Parenless yield arguments
================

def f
  yield 1, 2
end

---

(program
  (method
    (identifier)
    (yield
      (argument_list
        (integer)
        (integer)))))

================
Targetless case
================

result = case
when flag then "yes"
else "no"
end

---

(program
  (assignment
    (identifier)
    (case
      (when
        (identifier)
        (string
          (string_content)))
      (else
        (string
          (string_content))))))

================
Splat when patterns
================

case n
when *allowed then "ok"
when 1, 2 then "small"
end

---

(program
  (case
    subject: (identifier)
    (when
      (splat_argument
        (identifier))
      (string
        (string_content)))
    (when
      (integer)
      (integer)
      (string
        (string_content)))))
