test/corpus/error_handling.txt
================
Begin rescue ensure
================

begin
  "ok"
rescue(RuntimeError)
  "rescued"
ensure
  now
end

---

(program
  (begin
    (string
      (string_content))
    (rescue
      (constant)
      (string
        (string_content)))
    (ensure
      (identifier))))

================
Raise
================

raise("boom")

---

(program
  (raise
    (string
      (string_content))))

================
Rescue with type and binding
================

begin
  risky
rescue TypeError => e
  puts e
end

---

(program
  (begin
    (identifier)
    (rescue
      (constant)
      (identifier)
      (command_call
        (identifier)
        (command_arguments
          (identifier))))))

================
Multiple rescue clauses
================

begin
  risky
rescue TypeError => e
  puts 1
rescue Http::Error => e
  puts 2
rescue => e
  puts e
end

---

(program
  (begin
    (identifier)
    (rescue
      (constant)
      (identifier)
      (command_call
        (identifier)
        (command_arguments
          (integer))))
    (rescue
      (scoped_constant
        (constant)
        (constant))
      (identifier)
      (command_call
        (identifier)
        (command_arguments
          (integer))))
    (rescue
      (identifier)
      (command_call
        (identifier)
        (command_arguments
          (identifier))))))

================
Begin with else and ensure
================

begin
  x = 1
rescue
  puts 0
else
  puts x
ensure
  puts 2
end

---

(program
  (begin
    (assignment
      (identifier)
      (integer))
    (rescue
      (command_call
        (identifier)
        (command_arguments
          (integer))))
    (else
      (command_call
        (identifier)
        (command_arguments
          (identifier))))
    (ensure
      (command_call
        (identifier)
        (command_arguments
          (integer))))))

================
Retry inside rescue
================

begin
  attempt
rescue
  retry if tries < 2
end

---

(program
  (begin
    (identifier)
    (rescue
      (modifier
        (retry)
        (binary
          (identifier)
          (integer))))))

================
Method level rescue and ensure
================

def f
  risky
rescue RuntimeError => e
  0
ensure
  puts "done"
end

---

(program
  (method
    (identifier)
    (identifier)
    (rescue
      (constant)
      (identifier)
      (integer))
    (ensure
      (command_call
        (identifier)
        (command_arguments
          (string
            (string_content)))))))

================
Rescue modifier expression
================

x = risky rescue 0

---

(program
  (assignment
    (identifier)
    (rescue_modifier
      (identifier)
      (integer))))

================
Raise with type and parenless arguments
================

raise ArgumentError, "bad"
raise "boom"
raise

---

(program
  (raise
    (constant)
    (string
      (string_content)))
  (raise
    (string
      (string_content)))
  (raise))

================
Union rescue types
================

begin
  risky
rescue AssertionError | RuntimeError => err
  err
end

---

(program
  (begin
    (identifier)
    (rescue
      (constant)
      (constant)
      binding: (identifier)
      (identifier))))
