test/corpus/expressions.txt
================
Command call with arguments
================

def run
  assert value > 0, "must be positive"
end

---

(program
  (method
    (identifier)
    (command_call
      (identifier)
      (command_arguments
        (binary
          (identifier)
          (integer))
        (string
          (string_content))))))

================
Command call single argument
================

def run
  assert value
end

---

(program
  (method
    (identifier)
    (command_call
      (identifier)
      (command_arguments
        (identifier)))))

================
Brace block
================

def run
  items.each { |x| x }
end

---

(program
  (method
    (identifier)
    (call
      (identifier)
      (identifier)
      (block
        (block_parameters
          (identifier))
        (identifier)))))

================
Statement modifiers
================

def run
  go if ready
  stop if !done
end

---

(program
  (method
    (identifier)
    (modifier
      (identifier)
      (identifier))
    (modifier
      (identifier)
      (unary
        (identifier)))))

================
Destructuring with splat
================

def run
  first, *rest = items
end

---

(program
  (method
    (identifier)
    (destructuring_assignment
      (identifier)
      (splat_target
        (identifier))
      (identifier))))

================
Nested destructuring groups
================

x, (y, z) = [1, [2, 3]]

---

(program
  (destructuring_assignment
    left: (identifier)
    left: (destructured_target
      (identifier)
      (identifier))
    right: (array
      (integer)
      (array
        (integer)
        (integer)))))

================
Member and subscript destructuring targets
================

values[1], *rest = values
@a, @@b = 1, 2

---

(program
  (destructuring_assignment
    left: (subscript
      (identifier)
      (integer))
    left: (splat_target
      (identifier))
    right: (identifier))
  (destructuring_assignment
    left: (instance_variable)
    left: (class_variable)
    right: (integer)
    right: (integer)))

================
Safe navigation is not a destructuring target
================

a.b, c = 1, 2

---

(program
  (destructuring_assignment
    left: (member_access
      (identifier)
      (identifier))
    left: (identifier)
    right: (integer)
    right: (integer)))

================
Chained and call-receiver destructuring targets
================

a.b.c, d = 1, 2
f(x).y, z = 1, 2

---

(program
  (destructuring_assignment
    left: (member_access
      (member_access
        (identifier)
        (identifier))
      (identifier))
    left: (identifier)
    right: (integer)
    right: (integer))
  (destructuring_assignment
    left: (member_access
      (call
        method: (identifier)
        (argument_list
          (identifier)))
      (identifier))
    left: (identifier)
    right: (integer)
    right: (integer)))

================
Command calls as modifier bodies
================

puts x if ready
puts [1, 2] if !done

---

(program
  (modifier
    body: (command_call
      method: (identifier)
      arguments: (command_arguments
        (identifier)))
    condition: (identifier))
  (modifier
    body: (command_call
      method: (identifier)
      arguments: (command_arguments
        (array
          (integer)
          (integer))))
    condition: (unary
      (identifier))))

================
Constant command callees
================

Loader [1], [2]

---

(program
  (command_call
    method: (constant)
    arguments: (command_arguments
      (array
        (integer))
      (array
        (integer)))))
